k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: drkiq
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drkiq
            port:
              number: 8010
